# online_store

./: .env.example  Dockerfile  README.md  docker-compose.yml  nginx.conf  pyproject.toml  requirements.txt
backend/apps/auth/: apps.py  urls.py  views.py
backend/apps/categories/: models.py  serializers.py  urls.py  views.py
backend/apps/categories/migrations/: 0001_initial.py
backend/apps/orders/: consumers.py  models.py  routing.py  serializers.py  urls.py  views.py
backend/apps/orders/migrations/: 0001_initial.py  (+2 more)
backend/apps/products/: filters.py  models.py  serializers.py  urls.py  views.py
backend/apps/users/: managers.py  models.py  serializers.py
backend/configs/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
backend/configs/extra_conf/: __init__.py  channels_conf.py  email_conf.py  jwt_conf.py  rest_conf.py
backend/core/: permissions.py
backend/core/dataclasses/: user_dataclass.py
backend/core/services/: email_service.py
backend/templates/: make_order.html  register.html  spam.html
client/: asset-manifest.json  index.html
client/static/css/: main.1e5dabb7.css  main.1e5dabb7.css.map
client/static/js/: main.72f8bf8e.js  main.72f8bf8e.js.map
frontend/: package-lock.json
frontend/src/: App.js  index.js  router.js
frontend/src/constants/: urls.js
frontend/src/pages/: CartPage.js  CartPage.module.css  LoginPage.js  MainPage.js  MainPage.module.css  OrdersPage.js  RegisterPage.js  RegisterPage.module.css
frontend/src/services/: authService.js  cartService.js  categoryService.js  orderService.js  productService.js
(+13 files in other folders)
